...
              imageRenderSize: imageRect.size,
            ),
          );
        });

        return Stack(
          key: const Key('editor-canvas'),
          fit: StackFit.expand,
          children: <Widget>[
            const ColoredBox(color: Colors.black),
            Positioned.fromRect(
              rect: imageRect,
              child: ClipRect(
...
